--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   build:
     commands:
       - pip install -r requirements.txt -t .
-      - aws cloudformation package --template-file template.yml --output-template-file template-out.yml --s3-bucket courseendproject-lambdadeployment-20250825
+      - aws cloudformation package --template-file template.yml --output-template-file template-out.yml --s3bucket7182
 
 artifacts:
   files:
